2006-01-01  Heikki Orsila <heikki.orsila@iki.fi>
	* version 0.11
	- Added size units to display total bytes. It is more human-readable
	  to display 14.31 MiB rather than 15000000 bytes. Thanks to Al Piszcz
	  for suggesting this feature.
	- Note: you may access the pmr CVS repository by:
	  cvs -d :pserver:uadecvs@zakalwe.virtuaalipalvelin.net:/home/uade-cvsroot login
	  <password is uadecvs>
	  cvs -d :pserver:uadecvs@zakalwe.virtuaalipalvelin.net:/home/uade-cvsroot co pmr
	- It is now possible to specify throughtput limit in SI, IEC 60027
	  and bit units. Valid IEC 60027 units (base 2) are:
	    B, KiB, MiB, GiB, TiB, PiB, EiB, ZiB and YiB
	  Valid SI units (base 10) are:
	    B, kB, MB, GB, TB, PB, EB, ZB and YB
	  Valid bit units are:
	    b, kbit, Mbit, GBit, Tbit, Pbit, Ebit, Zbit and Ybit.
	  An example:
	    tar cvf - *FILES* |pmr -l 256kbits |nc host port

2005-08-09  Heikki Orsila <heikki.orsila@iki.fi>
	- Changed sprintf() to snprintf() in timetest() to shut up an OpenBSD
	  compiler. The program wasn't faulty, but an OpenLSD compiler is
	  paranoid.

2005-07-21  Heikki Orsila <heikki.orsila@iki.fi>
	* version 0.10
	- Started keeping ChangeLog file, and moved history information from
	  pmr.c to this file.
	- Removed useless documentation from pmr.c.
	- Edited man-page to be more readable.
	- Removed everything about -c switch.
	- Added -m / --md5 switch that computes an md5 checksum of the stream.
	  This is useful for verifying data integrity through TCP networks.
	  Thanks to Ave for the idea.

2005-03-08  Heikki Orsila <heikki.orsila@iki.fi>
	* version 0.09
	- edited man page.

2005-02-19  Heikki Orsila <heikki.orsila@iki.fi>
	- changed web site url to http://www.iki.fi/shd/foss/pmr/, and changed
	  printed speed units to IEC 60027-2 (2000-11) Ed. 2.0. kB => KiB,
	  MB => MiB, GB => GiB, TB => TiB.

2004-07-28  Heikki Orsila <heikki.orsila@iki.fi>
	* version 0.08
	- add -l switch to the command help (i forgot to do in 0.07)
