@@ -1,2 +1,0 @@
-2006-01-23: Non-blocking I/O causes pmr to abort.
-
